--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="#" class="button" id="clear">
       <i class="fa fa-trash" aria-hidden="true"></i>
     </a>
-    <ul id="results"></ul>
+    <ul class="results"></ul>
   </div>
   <script type="text/javascript" src="script-compiled.js"></script>
 </body>
